등록 API 생성, 트렌잭션 작업
